--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <okhttp.version>3.10.0</okhttp.version>
         <mybatis.plus.version>2.1.9</mybatis.plus.version>
         <fastjson.version>1.2.41</fastjson.version>
+        <swagger.version>2.5.0</swagger.version>
+        <jackson.databind.version>2.11.1</jackson.databind.version>
     </properties>
 
 
@@ -77,7 +79,13 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.11.1</version>
+            <version>${jackson.databind.version}</version>
+        </dependency>
+        <!--api文档生成工具-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
     </dependencies>
     <distributionManagement>
